	  them to be defined as const
	* parser.y (allocate_body): set target attribute for target identifier
	* parser.y (target_identifier): refactored to drop duplicate code
	* typeck.c (cb_build_move): don't set target attribute (duty of caller)
	* typeck.c (cb_emit_allocate_identifier): allow nonstandard
	  ALLOCATE linkage-item depending on cb_relaxed_syntax_checks

2022-09-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_abort_msg): use negative cb_source_line to reference
	  last known position during codegen
	* codegen.c (output_stmt): store source reference if generated
	  statement has one attached
	* codegen.c (output_standard_includes): fix bug #708 missing math
	  header inclusion if first program has no decimal
	* codegen.c (output_data, output_call): fix bug #855 CALL generation
	  when using figurative constants
	* codegen.c: correct use of CB_PREFIX_DECIMAL -> generated code now has
	  "d_" prefix instead of "d" in all places
	* cobc.h, tree.h: moved some function declarations
	* tree.c, tree.h (cb_literal_value), codegen.c, parser.y: moved double
	  and identical defined function literal_value to a single place
	* codegen.c, tree.h, cobc.c: renamed cb_init_codegen
	  to clear_local_codegen_vars
	* cobc.c: ask user for reporting reallocation memory issues

2022-09-26  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* error.c (cb_syntax_check, cb_syntax_check_x): add variants of
	  cb_{error,warning}[_x] functions with explicit va_list, and new helper
	  functions to dispach to errors or warnings w.r.t
	  cb_relaxed_syntax_checks
	* scanner.l, parser.l: make Area A enforcement raise errors instead of
	  warnings on strict dialects
	* parser.y: add missing Area A check on SELECT and CD
	* parser.y, typeck.c: simplify some uses of cb_relaxed_syntax_checks
	* pplex.l: drop `>>(NO)AREACHECK` directives
	* config.def: improve documentation for areacheck option

2022-09-20  Simon Sobisch <simonsobisch@gnu.org>
